  [BUG FIXES]
  1. Prevent warnings about "uninitialized values" for REQUEST_URI, HTTP_USER_AGENT and other environment variables.
     Patches by Callum Gibson, heiko and Mark Stosberg. (RT#24684, RT#29065)
  2. Avoid death in some cases when running under Taint mode on Windows. 
     Patch by Peter Hancock (RT#43796)

  [INTERNALS]  
  1. New t/unescapeHTML.t test script has been added. It includes a TODO test for a pre-existing
     bug which could use a patch. Thanks to Pete Gamache and Mark Stosberg (RT#39122)
  2. New t/user_agent.t test script has been added. Thanks to Mark Stosberg  
  3. Several typos were fixed, Thanks to ambs. (RT#41105)

  Version 3.44
  1. Patch from Kurt Jaeger to allow HTTP PUT even if the content length is unknown.
  2. Patch from Pavel merdin to fix a problem for one of the FireFox addons.
  3. Fixed issue in mod_perl & fastCGI environment of cookies returned from 
     CGI->cookie() leaking from one session to another.

  Version 3.43
  1. Documentation patch from MARKSTOS@cpan.org to replace all occurrences of
  "new CGI" with CGI->new()" to reflect best perl practices.
  2. Patch from Stepan Kasal to fix utf-8 related problems in perl 5.10

  Version 3.42
  1. Added patch from Renee Baecker that makes it possible to subclass
  CGI::Pretty.
  2. Added patch from Nicholas Clark to allow ~ characters in temporary directories.
  3. Added patch from Renee Baecker that fixes the inappropriate escaping of fields
     in multipart headers.

  Version 3.41
  1. Fix url() returning incorrect path when query string contains escaped newline.
  2. Added additional windows temporary directories and environment variables, courtesy patch from Renee Baecker
  3. Added a handle() method to the lightweight upload
  filehandles. This method returns a real IO::Handle object.
  4. Added patch from Tony Vanlingen to fix deep recursion warnings in CGI::Pretty.

  Version 3.40
  1. Fixed CGI::Fast docs to eliminate references to a "special"