@@ -3,12 +3,17 @@
      Patches by Callum Gibson, heiko and Mark Stosberg. (RT#24684, RT#29065)
   2. Avoid death in some cases when running under Taint mode on Windows. 
      Patch by Peter Hancock (RT#43796)
+  3. Allow 0 to be used as a default value in popup_menu(). This was broken starting in 3.37.
+     Thanks to Haze, who was the first to report this and supply a patch, and pfschill, who pinpointed
+     when the bug was introduced. A regression test for this was also added. (RT#37908)
+    
 
   [INTERNALS]  
   1. New t/unescapeHTML.t test script has been added. It includes a TODO test for a pre-existing
      bug which could use a patch. Thanks to Pete Gamache and Mark Stosberg (RT#39122)
-  2. New t/user_agent.t test script has been added. Thanks to Mark Stosberg  
+  2. New t/user_agent.t test script has been added. Thanks to Mark Stosberg.  
   3. Several typos were fixed, Thanks to ambs. (RT#41105)
+  4. New t/popup_menu.t test script has been added. Thanks to Mark Stosberg. (RT#37908)
 
   Version 3.44
   1. Patch from Kurt Jaeger to allow HTTP PUT even if the content length is unknown.
